service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service081125
spec:
  selector:
    app: <microservice>
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
